--- a/src/main/resources/com/example/gestionbanco/banco-view.fxml
+++ b/src/main/resources/com/example/gestionbanco/banco-view.fxml
@@ -45,7 +45,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gestionbanco.BancoController">
+<VBox prefHeight="685.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gestionbanco.BancoController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -94,7 +94,7 @@
           </font>
         </Label>
             <Label layoutX="28.0" layoutY="14.0" text="Nombre: " />
-            <AnchorPane id="panelVerCuenta" fx:id="paneVerCuenta" layoutX="16.0" layoutY="49.0" prefHeight="304.0" prefWidth="840.0" visible="false">
+            <AnchorPane id="panelVerCuenta" fx:id="paneVerCuenta" layoutX="16.0" layoutY="49.0" prefHeight="527.0" prefWidth="840.0">
                <children>
                   <Button layoutX="14.0" layoutY="40.0" mnemonicParsing="false" onAction="#btnMostrarCuenta" prefHeight="26.0" prefWidth="122.0" text="Ver cuenta" />
                   <Label fx:id="lblcuenta" layoutX="14.0" layoutY="79.0" prefHeight="210.0" prefWidth="349.0" style="-fx-background-color: white; -fx-border-color: black;" />
@@ -105,9 +105,14 @@
                       <TableColumn fx:id="cSaldo" minWidth="4.0" prefWidth="112.79998779296875" text="Saldo" />
                     </columns>
                   </TableView>
+                  <Label layoutX="14.0" layoutY="317.0" text="Cuenta Seleccionada:" />
+                  <Label fx:id="lblCuentaSeleccionada" layoutX="152.0" layoutY="317.0" />
+                  <TextField fx:id="txtCantidad" layoutX="293.0" layoutY="313.0" promptText="Cantidad" />
+                  <Button layoutX="455.0" layoutY="313.0" mnemonicParsing="false" onAction="#btnOperar" prefHeight="26.0" prefWidth="84.0" text="Ingresar" />
+                  <Button layoutX="562.0" layoutY="313.0" mnemonicParsing="false" onAction="#btnOperar" prefHeight="26.0" prefWidth="90.0" text="Retirar" />
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="panelCrearCuenta" layoutX="14.0" layoutY="78.0" prefHeight="200.0" prefWidth="432.0">
+            <AnchorPane fx:id="panelCrearCuenta" layoutX="14.0" layoutY="78.0" prefHeight="200.0" prefWidth="432.0" visible="false">
                <children>
                   <TextField fx:id="txtSaldo" layoutY="23.0" prefHeight="26.0" prefWidth="358.0" />
                   <Label layoutX="12.0" layoutY="5.0" text="Saldo Inicial:" />
