--- a/src/main/resources/com/example/gestionbanco/banco-view.fxml
+++ b/src/main/resources/com/example/gestionbanco/banco-view.fxml
@@ -53,9 +53,8 @@
           <items>
             <MenuItem mnemonicParsing="false" onAction="#mostrarPanelCrearCuenta" text="Crear Cuenta" />
             <MenuItem mnemonicParsing="false" onAction="#menuVerCuentas" text="Ver cuentas" />
-            <Menu mnemonicParsing="false" text="Open Recent" />
             <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Close" />
+            <MenuItem mnemonicParsing="false" onAction="#itemHacerTransferencia" text="Hacer transferencia" />
             <MenuItem mnemonicParsing="false" text="Save" />
             <MenuItem mnemonicParsing="false" text="Save As…" />
             <MenuItem mnemonicParsing="false" text="Revert" />
@@ -94,7 +93,7 @@
           </font>
         </Label>
             <Label layoutX="28.0" layoutY="14.0" text="Nombre: " />
-            <AnchorPane id="panelVerCuenta" fx:id="paneVerCuenta" layoutX="16.0" layoutY="49.0" prefHeight="527.0" prefWidth="840.0">
+            <AnchorPane id="panelVerCuenta" fx:id="paneVerCuenta" layoutX="16.0" layoutY="49.0" prefHeight="581.0" prefWidth="840.0">
                <children>
                   <Button layoutX="14.0" layoutY="40.0" mnemonicParsing="false" onAction="#btnMostrarCuenta" prefHeight="26.0" prefWidth="122.0" text="Ver cuenta" />
                   <Label fx:id="lblcuenta" layoutX="14.0" layoutY="79.0" prefHeight="210.0" prefWidth="349.0" style="-fx-background-color: white; -fx-border-color: black;" />
@@ -105,7 +104,15 @@
                       <TableColumn fx:id="cSaldo" minWidth="4.0" prefWidth="112.79998779296875" text="Saldo" />
                     </columns>
                   </TableView>
-                  <Label layoutX="14.0" layoutY="317.0" text="Cuenta Seleccionada:" />
+                   <TableView fx:id="tblCuentas2" layoutX="395.0" layoutY="352.0" prefHeight="200.0" prefWidth="407.0">
+                       <columns>
+                           <TableColumn fx:id="cTitular2" prefWidth="111.99996948242188" text="Titular" />
+                           <TableColumn fx:id="cCuenta2" prefWidth="176.79998779296875" text="Nº de Cuenta" />
+                           <TableColumn fx:id="cSaldo2" minWidth="4.0" prefWidth="112.79998779296875" text="Saldo" />
+                       </columns>
+                   </TableView>
+
+                   <Label layoutX="14.0" layoutY="317.0" text="Cuenta Seleccionada:" />
                   <Label fx:id="lblCuentaSeleccionada" layoutX="152.0" layoutY="317.0" />
                   <TextField fx:id="txtCantidad" layoutX="293.0" layoutY="313.0" promptText="Cantidad" />
                   <Button layoutX="455.0" layoutY="313.0" mnemonicParsing="false" onAction="#btnOperar" prefHeight="26.0" prefWidth="84.0" text="Ingresar" />
